# ONE-TelecomX-2

./: .gitignore  CHALLENGE.md  README.md  app.py  challenge.ipynb  pyproject.toml  requirements.txt
notebooks/: 01_preparacion_datos.ipynb  02_correlacion_seleccion.ipynb  03_modelado_predictivo.ipynb  04_interpretacion_conclusiones.ipynb
src/: __init__.py  analysis.py  config.py  data_loader.py  generate_figures.py  modeling.py  preprocessing.py  visualization.py
